--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nitishsaini706.github.io/TextUtils/",
+  "homepage": "https://nitishsaini706.github.io/TextUtils",
   "name": "learning-react",
   "version": "0.1.0",
   "private": true,
